box overflow fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -10,10 +10,10 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 90vh;
     background-color: #ccc;
     font-family: 'Noto Sans', sans-serif;
     font-weight: 400;
+    padding: 2rem;
 }
 
 h1 {
@@ -142,7 +142,7 @@ button:hover {
     text-align: center;
 }
 
-.modal-footer > button {
+.modal-footer>button {
     width: 3.5rem;
     height: 2rem;
 }
